NOJIRA rydd offisiellkode + logging